--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,11 @@
   <meta property="og:title" content="hydrApp" />
   <meta property="og:description" content="With this simple app you can track how many glasses of water you drink per day" />
   <meta property="og:url" content="https://jchojna.github.io/hydrApp/" />
-  <meta property="og:image" content="https://jchojna.github.io/hydrApp/assets/img/cover.png" />
-  <meta property="og:image:width" content="600" />
-  <meta property="og:image:height" content="600" />
+  <meta property="og:image" content="https://jchojna.github.io/hydrApp/assets/img/cover.jpg" />
+  <meta property="og:image:width" content="1400" />
+  <meta property="og:image:height" content="800" />
   <!-- #endregion -->
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,500,600,700&display=swap" rel="stylesheet">
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
